minitrace-macro/tests/ui/err/item-is-not-a-function.stderr
error: expected `fn`
 --> tests/ui/err/item-is-not-a-function.rs:4:1
  |
4 | struct S;
  | ^^^^^^
